<resources>
    <string name="app_name">MTKLogger</string>
    <string name="notification_title_network">Network log</string>
    <string name="notification_title_mobile">Mobile log</string>
    <string name="notification_title_modem">Modem log</string>
    <string name="notification_title_met">MET log</string>
    <string name="notification_title">MTKLogger is running</string>
    <string name="notification_on_summary_suffix">is on.</string>
    <string name="notification_on_summary_suffixes">are on.</string>
    <string name="notification_off_summary_suffix">is off.</string>
    <string name="notification_off_summary_suffixes">are off.</string>
    <string name="notification_nearly_out_of_storage">Log storage is running out.</string>
    <string name="notification_out_of_storage_summary">Click to get more information.</string>
    <string name="network_log_name">NetworkLog</string>
    <string name="mobile_log_name">MobileLog</string>
    <string name="modem_log_name">ModemLog</string>
    <string name="modem_log_name1">ModemLog1</string>
    <string name="modem_log_name2">ModemLog2</string>
    <string name="modem_log_name3">ModemLog3</string>
    <string name="modem_log_name4">ModemLog4</string>
    <string name="modem_log_name5">ModemLog5</string>
    <string name="modem_log_name6">ModemLog6</string>
    <string name="modem_log_name7">ModemLog7</string>
    <string name="modem_log_name8">ModemLog8</string>
    <string name="met_log_name">METLog</string>
    <string name="dual_modem_log_name">DualModemLog</string>
    <string name="ext_modem_log_name">ExtModemLog</string>
    <string name="tag_log_name">TagLog</string>
    <string name="menu_settings">Settings</string>
    <string name="mobilelog_unselected">There is no type of mobilelog seleted, it will not be started!</string>
    <string name="no_log_on">There is no log on!</string>
    <string name="log_path_str">Log path</string>
    <string name="log_used_storage">Used</string>
    <string name="log_free_storage">Free</string>
    <string name="log_start">%s recording</string>
    <string name="log_stop">%s stopped</string>
    <string name="log_unselected">%s disabled</string>
    <string name="time_default">0:00:00</string>
    <string name="log_path_type_label_unknown">Unknown</string>
    <string name="log_path_type_label_sd">SD Card</string>
    <string name="general_settings_title">General Settings</string>
    <string name="advanced_settings_title">Advanced settings</string>
    <string name="enable_tag_log_title">Enable Tag Log</string>
    <string name="enable_tag_log_summary">Enable or disable tag log function</string>
    <string name="log_storage_location_title">Log storage location</string>
    <string name="run_command_title">Run Command</string>
    <string name="run_command_summary">You could write shell command here</string>
    <string name="limit_single_log_size_title">Limit Current Log Size(MB)</string>
    <string name="limit_single_log_size_summary">Recycle current recording log when it reaches the limit log size</string>
    <string name="limit_total_log_size_title">Limit Total Log Size(MB)</string>
    <string name="limit_total_log_size_summary">Total recorded log (include past ones) will not exceed this size</string>
    <string name="enable_met_log_title">Enable MET Log</string>
    <string name="enable_met_log_summary">Enable or disable MET log function</string>
    <string name="metlog_settings">METLog Settings</string>
    <string name="metlog_period_title">Period time(ms)</string>
    <string name="metlog_period_summary">Set METLog period time</string>
    <string name="metlog_cpu_buffer_title">CPU Buffer(KB)</string>
    <string name="metlog_cpu_buffer_summary">Set METLog CPU Buffer size</string>
    <string name="mobilelog_settings">MobileLog Settings</string>
    <string name="enable_mobilelog">Enable MobileLog</string>
    <string name="enable_android_log_title">Android Log</string>
    <string name="enable_android_log_summary">Enable or disable android log</string>
    <string name="enable_kernel_log_title">Kernel Log</string>
    <string name="enable_kernel_log_summary">Enable or disable kernel log</string>
    <string name="enable_bluetooth_log_title">Bluetooth Log</string>
    <string name="enable_bluetooth_log_summary">Enable or disable bluetooth log</string>
    <string name="enable_md32_log_title">MD32 Log</string>
    <string name="enable_md32_log_summary">Enable or disable MD32 log</string>
    <string name="enable_atf_log_title">ATF Log</string>
    <string name="enable_atf_log_summary">Enable or disable ATF Log</string>
    <string name="limit_log_size_title">Limit Log Size(MB)</string>
    <string name="limit_log_size_summary">Recycle log when it reaches the limit log size</string>
    <string name="start_automatically_title">Start Automatically</string>
    <string name="start_automatically_mobile_summary">Start Mobile Log automatically when next bootup</string>
    <string name="modemlog_settings">ModemLog Settings</string>
    <string name="enable_modemlog">Enable ModemLog</string>
    <string name="log_mode_title">Log Mode</string>
    <string name="log_mode_summary">Set modem log mode</string>
    <string name="start_automatically_modem_summary">Start Modem Log automatically when restart or switch modem</string>
    <string name="reset_automatically_modem_title">Reset Modem Automatically</string>
    <string name="reset_automatically_modem_summary">Reset Modem automatically after EE happened</string>
    <string name="networklog_settings">NetworkLog Settings</string>
    <string name="enable_networklog">Enable NetworkLog</string>
    <string name="start_automatically_network_summary">Start Network Log automatically when next bootup</string>
    <string name="networklog_ping_title">Enable environment check</string>
    <string name="networklog_ping_summary">Check network running environment at stopping time. This may take a few seconds.</string>
    <string name="networklog_limit_package_enabler">Enable package limitation</string>
    <string name="networklog_limit_package_enabler_summary">"Check to limit each network log package's size to the given value"</string>
    <string name="networklog_limit_package_size">Limited package size</string>
    <string name="networklog_limit_package_size_summary">Each package size will not exceed this value</string>
    <string name="default_mode_value">2</string>
    <string name="preferences_aee_settings">Android Debug Settings</string>
    <string name="preference_aeemode">AEE Working Mode</string>
    <string name="title_preference_aeemode">Debug Level</string>
    <string name="summary_preference_aeemode">Options for exception level, db location, notification</string>
    <string name="dialog_title_list_preference_aeemode">Select Debug Level</string>
    <string name="preference_dal_setting">DAL Setting</string>
    <string name="title_preference_dal_setting">DAL Setting</string>
    <string name="summary_preference_dal_setting">Options for enable red screen or not</string>
    <string name="dialog_title_list_preference_dal_setting">DAL Setting Option</string>
    <string name="preference_cleardal">Clear DAL</string>
    <string name="summary_preference_cleardal">Clear Red Screen Alert</string>
    <string name="title_preference_cleardal">Clear Red Screen</string>
    <string name="title_preferences_device_maintain">Maintain Device</string>
    <string name="preferences_device_maintain">MaintainDevice</string>
    <string name="preference_cleandata">Clean Device</string>
    <string name="summary_preference_cleandata">Clean up /data partition</string>
    <string name="title_preference_cleandata">Clean device</string>
    <string name="modem_vcom_map">USB port setting</string>
    <string name="logs">ADDITIONAL LOGS</string>
    <string name="mobile_log">MobileLog</string>
    <string name="modem_log">ModemLog</string>
    <string name="net_log">NetLog</string>
    <string name="basic_info">BASIC INFO</string>
    <string name="pref_key_exception_db">exception_db</string>
    <string name="pref_key_process_name">process_name</string>
    <string name="pref_key_exception_class">exception_class</string>
    <string name="pref_key_exception_level">exception_level</string>
    <string name="pref_key_exception_type">exception_type</string>
    <string name="pref_key_build_version">build_version</string>
    <string name="pref_key_device_name">device_name</string>
    <string name="pref_key_date_time">date_time</string>
    <string name="chk_key_mobile_log">chk_mobile_log</string>
    <string name="chk_key_net_log">chk_net_log</string>
    <string name="chk_key_modem_log">chk_modem_log</string>
    <string name="status">status</string>
    <string name="pref_key_log_id">log_id</string>
    <string name="pref_key_cr_id">cr_id</string>
    <string name="pref_key_upload_status">upload_status</string>
    <string name="pref_key_upload_time">upload_time</string>
    <string name="pref_key_mobile_log">mobile_log</string>
    <string name="pref_key_modem_log">modem_log</string>
    <string name="pref_key_network_log">network_log</string>
    <string name="log_id">Log ID</string>
    <string name="cr_id">CR ID</string>
    <string name="upload_status">Upload status</string>
    <string name="upload_time">Upload time</string>
    <string name="pref_category_key_logs">pref_category_key_logs</string>
    <string name="btn_trigger_is">Trigger Issue Submitter</string>
    <string name="btn_trigger_float">Popup float button</string>
    <string name="btn_remove_float">Remove float button</string>
    <string name="btn_sync_info">Sync info from server</string>
    <string name="capture_screen_btn_label">Capture screen</string>
    <string name="upload_screen_btn_label">Upload screen</string>
    <string name="action_btn_cancel">Cancel</string>
    <string name="login_dialog_label_username">User name</string>
    <string name="login_dialog_label_password">Password</string>
    <string name="login_page_hint_username">Input your CQ account here</string>
    <string name="login_page_hint_pwd">Input your CQ password here</string>
    <string name="login_page_btn_login">Login</string>
    <string name="login_page_msg_remember">Remember me</string>
    <string name="login_page_msg_show_pwd">Show password</string>
    <string name="info_edit_submitter_label">Submitter</string>
    <string name="info_edit_submitter_hint">Department name / Your name</string>
    <string name="info_edit_assignee_label">Assignee</string>
    <string name="info_edit_assignee_hint">Select an assignee</string>
    <string name="info_edit_assignee_selector_desc">Select a owner</string>
    <string name="info_edit_title_label">Title</string>
    <string name="info_edit_feature_category_label">Feature category</string>
    <string name="info_edit_feature_name_label">Feature name</string>
    <string name="info_edit_priority_label">Priority</string>
    <string name="info_edit_repeat_ratio_label">Repeat ratio</string>
    <string name="info_edit_repeat_steps_label">Repeat steps</string>
    <string name="info_edit_description_label">Descriptions</string>
    <string name="is_history_title">Issue submitter history</string>
    <string name="is_history_summary">Click to check and edit issue history record</string>
    <string name="is_switch_title">Issue Submitter</string>
    <string name="is_switch_summary">Click to do more configuration</string>
    <string name="test_hint_username">username</string>
    <string name="test_hint_pwd">password</string>
    <string name="test_hint_login">Login</string>
    <string name="test_label_stress_test">Stress Test Label</string>
    <string name="test_label_stress_test_count">Stress Test count</string>
    <string name="test_btn_qa_test">QA Test</string>
    <string name="test_btn_common_test">Common Test</string>
    <string name="test_btn_stop_test">Stop Test</string>
</resources>