<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/menu_settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/general_settings_title" android:key="general_settings_category">
        <com.mediatek.mtklogger.utils.SelfdefinedSwitchPreference android:title="@string/mobile_log_name" android:key="mobilelog_switch" android:defaultValue="true" />
        <com.mediatek.mtklogger.utils.SelfdefinedSwitchPreference android:title="@string/modem_log_name" android:key="modemlog_switch" android:defaultValue="true" />
        <com.mediatek.mtklogger.utils.SelfdefinedSwitchPreference android:title="@string/network_log_name" android:key="networklog_switch" android:defaultValue="true" />
        <com.mediatek.mtklogger.utils.SelfdefinedSwitchPreference android:title="@string/met_log_name" android:key="metlog_switch" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/advanced_settings_title" android:key="advanced_settings_category">
        <CheckBoxPreference android:title="@string/enable_tag_log_title" android:key="taglog_enable" android:summary="@string/enable_tag_log_summary" android:defaultValue="true" />
        <com.mediatek.mtklogger.utils.ISSwitchPreference android:persistent="false" android:layout="?android:preferenceLayoutChild" android:title="@string/is_switch_title" android:key="is_switch" android:summary="@string/is_switch_summary" android:defaultValue="true" />
        <ListPreference android:title="@string/log_storage_location_title" android:key="log_storage_location" android:dialogTitle="@string/log_storage_location_title" />
        <EditTextPreference android:title="@string/run_command_title" android:key="run_command" android:summary="@string/run_command_summary" />
        <Preference android:title="@string/is_history_title" android:key="is_history" android:summary="@string/is_history_summary">
            <intent android:targetPackage="com.mediatek.mtklogger" android:targetClass="com.mediatek.mtklogger.issuesubmitter.ui.history.HistoryActivity" />
        </Preference>
        <CheckBoxPreference android:title="@string/enable_met_log_title" android:key="metlog_enable" android:summary="@string/enable_met_log_summary" android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>