<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:id="@id/trigger_btn" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_trigger_is" />
    <View android:layout_width="fill_parent" android:layout_height="10.0dip" />
    <Button android:id="@id/trigger_float_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_trigger_float" />
    <Button android:id="@id/remove_float_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_remove_float" />
    <Button android:id="@id/sync_info_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_sync_info" />
    <Button android:id="@id/capture_screen" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/capture_screen_btn_label" />
    <Button android:id="@id/upload_screen" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/upload_screen_btn_label" />
    <EditText android:id="@id/login_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/test_hint_username" />
    <EditText android:id="@id/login_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/test_hint_pwd" android:inputType="textPassword" />
    <Button android:id="@id/btn_login" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/test_hint_login" />
    <EditText android:id="@id/test_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/test_label_stress_test" android:inputType="number" />
    <EditText android:id="@id/test_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/test_label_stress_test_count" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/btn_begin_qa_test" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/test_btn_qa_test" />
        <Button android:id="@id/btn_begin_common_test" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/test_btn_common_test" />
        <Button android:id="@id/btn_stop_test" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/test_btn_stop_test" />
    </LinearLayout>
    <View android:layout_width="fill_parent" android:layout_height="20.0dip" />
    <TextView android:id="@id/bbs_content" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <View android:layout_width="fill_parent" android:layout_height="20.0dip" />
</LinearLayout>